--- a/plaquettes.html
+++ b/plaquettes.html
@@ -412,7 +412,7 @@
         <div class="sidebar-content">
 
             <div class="tabs-nav">
-                <a href="https://mikefri.github.io/GenCodeBarre" class="tab-btn" id="btn-tab-tools">Éditeur</a>
+                <a href="https://mikefri.github.io/GenCodeBarre/" class="tab-btn" id="btn-tab-tools">Éditeur</a>
                 <button class="tab-btn active" id="btn-tab-tools" data-target="tab-tools">Données</button>
             </div>
 
