--- a/Plaquettesf.html
+++ b/Plaquettesf.html
@@ -107,7 +107,7 @@
     <label>4. Option Flèche latérale</label>
     <select id="arrowOption" style="margin-bottom: 10px;">
         <option value="none">Aucune</option>
-        <option value="line-up">↑ Vers le Haut (Ligne Épaisse)</option> <option value="line-down">↓ Vers le Bas (Ligne Épaisse)</option> </select>
+        <option value="line-up">↑ Vers le Haut </option> <option value="line-down">↓ Vers le Bas </option> </select>
 </div>
             </div>
 
