--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <aside class="sidebar">
     <div class="sidebar-header">
-      <div class="app-title">GenCodeBarre<span style="font-size: 0.7em; opacity: 0.6; font-weight: normal; margin-left: 5px;">v2.3 (A3 Unlock)</span></div>
+      <div class="app-title">GenCodeBarre<span style="font-size: 0.7em; opacity: 0.6; font-weight: normal; margin-left: 5px;">v2.3</span></div>
     </div>
     
     <div class="sidebar-content">
