--- a/plaquettes.html
+++ b/plaquettes.html
@@ -118,6 +118,11 @@
     </aside>
 
     <main class="main-content">
+
+    <button id="helpButton" class="action-btn help-btn" title="Aide et informations">
+    <i class="fas fa-circle-info"></i> </button>
+        
+        
         <div class="toolbar-preview">
             <span>Zoom Aperçu</span>
             <input type="range" id="zoomSlider" min="0.4" max="1.5" step="0.1" value="0.7">
