--- a/index.html
+++ b/index.html
@@ -195,18 +195,13 @@
     <div class="modal-body">
       <h4>🛠️ Onglet Éditeur (Générateur)</h4>
       <ul>
-        <li>**Titre de page** : Ajoute un titre en haut de votre feuille d'impression (ex: "Inventaire Magasin A").</li>
-        <li>**Données (Code)** : C'est ici que vous saisissez le texte ou le numéro qui sera encodé.</li>
-        <li>**Format** : Choisissez le type de code (Code 128 pour la plupart des usages, EAN-13 pour les produits, QR Code pour les liens/infos).</li>
-        <li>**Échelle du Code** : Ajustez la taille physique du code-barres sur la page imprimée.</li>
+        <li>Titre de page : Ajoute un titre qui ce positionnera en haut du code barre (ex: "Inventaire Magasin A").</li>
+        <li>Données (Code) : C'est ici que vous saisissez le texte ou le numéro qui sera encodé dans le code barre.</li>
+        <li>Type de Code : Choisissez le type de code (Code 128 pour la plupart des usages, EAN-13 pour les produits, QR Code pour les liens/infos).</li>
+        <li>Échelle du Code : Ajustez la taille physique du code-barres sur la page imprimée.</li>
       </ul>
       
-      <h4>📂 Onglet Données (Import Excel)</h4>
-      <p>Cet onglet vous permet d'importer une liste de codes depuis un fichier **Excel (.xlsx)** pour générer une planche complète en une seule fois.</p>
-      <ul>
-        <li>Assurez-vous que tous vos codes sont listés dans la **Colonne A** du fichier Excel.</li>
-        <li>Une fois l'import terminé, cliquez sur **"Voir la planche générée"** pour afficher tous les codes à imprimer.</li>
-      </ul>
+
     </div>
   </div>
 </div>
