--- a/plaquettes.html
+++ b/plaquettes.html
@@ -157,10 +157,10 @@
       <h4>📂 Onglet Plaquettes</h4>
       <p>Cet onglet vous permet d'importer une liste de codes depuis un fichier **Excel (.xlsx)** afin de générer une ou plusieurs planche(s) complète(s) en une seule fois.</p>
 <ul>
-    <li>Assurez-vous que tous vos codes sont listés dans la colonne A du fichier Excel.</li>
-    <li>Une fois l'import terminé, sélectionnez le type de code-barres que vous souhaitez.</li>
-    <li>Sélectionnez le type de planche que vous souhaitez.</li>
-    <li>En option, vous avez la possibilité d'ajouter une flèche d'orientation sur la partie gauche du code-barres.</li>
+    <li>Source de Données (Excel) : Assurez-vous que tous vos codes sont listés dans la colonne A du fichier Excel.</li>
+    <li>Type de Code : Choisissez le type de code (Code 128 pour la plupart des usages, EAN-13 pour les produits, QR Code pour les liens/infos).</li>
+    <li>Configuration Grille : Sélectionnez le type de planche que vous souhaitez.</li>
+    <li>Option Flèche latérale : Vous avez la possibilité d'ajouter une flèche d'orientation sur la partie gauche du code-barres.</li>
 </ul>
           
       </ul>
