--- a/plaquettes.html
+++ b/plaquettes.html
@@ -113,7 +113,7 @@
             </div>
 
         <div class="sidebar-footer">
-            <button class="action-btn btn-print" onclick="window.print()">Imprimer toutes les pages</button>
+            <button class="action-btn btn-print" onclick="window.print()">Imprimer toutes les Planches</button>
             <button class="action-btn btn-download" id="downloadBtn">Télécharger le PDF</button>
         </div>
     </aside>
