--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             Imprimer la page
           </button>
           <button class="action-btn btn-download" id="downloadBtn">
-            Telecharger en PDF
+            Telecharger le PDF
           </button>
         </div>
       </div>
