--- a/plaquettes.html
+++ b/plaquettes.html
@@ -127,6 +127,7 @@
         <div class="toolbar-preview">
             <span>Zoom Aperçu</span>
             <input type="range" id="zoomSlider" min="0.4" max="1.5" step="0.1" value="0.7">
+            <span id="zoomValue">70%</span>
         </div>
 
         <div class="preview-scroll-wrapper">
