--- a/plaquettes.html
+++ b/plaquettes.html
@@ -180,7 +180,7 @@
 <hr class="divider">
     
     <h4>📚 Documentation Complète</h4>  
-    <a href="https://mikefri.github.io/GenCodeBarre/README.HTML" target="_blank" class="btn-documentation">
+    <a href="https://mikefri.github.io/GenCodeBarre/README.html" target="_blank" class="btn-documentation">
         Consulter le README complet ↗
     </a>
     </div>
