--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <meta property="og:title" content="GenCodeBarre - Créez vos codes-barres en ligne">
   <meta property="og:description" content="Générez vos planches de codes-barres gratuitement au format A4/A3.">
   <meta property="og:type" content="website">
+<meta property="og:url" content="https://ton-pseudo.github.io/GenCodeBarre/">
+<meta property="og:title" content="GenCodeBarres - L'outil logistique gratuit">
+<meta property="og:description" content="Transformez vos fichiers Excel en planches d'étiquettes codes-barres en un clic.">
+<meta property="og:image" content="https://ton-pseudo.github.io/GenCodeBarre/icon-512x512.png">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="GenCodeBarres">
+<meta property="twitter:description" content="Générateur de planches d'étiquettes hors-ligne.">
+  <meta property="og:type" content="website">
   <meta name="theme-color" content="#0f172a">
   <meta name="theme-color" content="#0f172a">
 
