--- a/plaquettes.html
+++ b/plaquettes.html
@@ -7,10 +7,10 @@
     <title>Générer des Planches de Codes-Barres via Excel | GenCodeBarre</title>
     <meta name="description" content="Transformez vos listes Excel en planches d'étiquettes codes-barres prêtes à imprimer. Compatible A4, modèles prédéfinis et personnalisation complète.">
     <meta property="og:type" content="website">
-<meta property="og:url" content="https://ton-pseudo.github.io/GenCodeBarre/">
+<meta property="og:url" content="https://gencodebarre.ddns.net">
 <meta property="og:title" content="GenCodeBarres - L'outil logistique gratuit">
 <meta property="og:description" content="Transformez vos fichiers Excel en planches d'étiquettes codes-barres en un clic.">
-<meta property="og:image" content="https://ton-pseudo.github.io/GenCodeBarre/icon-512x512.png">
+<meta property="og:image" content="https://gencodebarre.ddns.net/icon-512x512.png">
 
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:title" content="GenCodeBarres">
